CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(SDK)

INCLUDE(../CMakeCommon OPTIONAL)
ADD_DEFINITIONS(-DDEBUG_BERT_SDK)

#SET(CMAKE_CXX_FLAGS_DEBUG   "-ggdb -Wall -Werror")
#SET(CMAKE_CXX_FLAGS_RELEASE "-O2   -Wall -Werror")

AUX_SOURCE_DIRECTORY(. SDK_SRC)
#AUX_SOURCE_DIRECTORY(./MemPool SDK_SRC)
AUX_SOURCE_DIRECTORY(./Log     SDK_SRC)
AUX_SOURCE_DIRECTORY(./Threads SDK_SRC)
#AUX_SOURCE_DIRECTORY(./Mysql   SDK_SRC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
ADD_LIBRARY(bertyoung ${SDK_SRC})
TARGET_LINK_LIBRARIES(bertyoung pthread; rt)
SET_TARGET_PROPERTIES(bertyoung PROPERTIES LINKER_LANGUAGE CXX)
