CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(PPCLIENT)

INCLUDE(../../CMakeCommon)

AUX_SOURCE_DIRECTORY(. PPCLIENT_SRC)

LINK_DIRECTORIES(../../../base)

ADD_EXECUTABLE(ppclient ${PPCLIENT_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(ppclient bertyoung;pthread;rt)
ADD_DEPENDENCIES(ppclient bertyoung)
