CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(PPSERVER)

INCLUDE(../../CMakeCommon)

AUX_SOURCE_DIRECTORY(. PPSERVER_SRC)

LINK_DIRECTORIES(../../../base)

ADD_EXECUTABLE(ppserver ${PPSERVER_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(ppserver bertyoung;pthread;rt)
ADD_DEPENDENCIES(ppserver  bertyoung)
